# object_segmenter

./: README.md
object_segmenter/: CMakeLists.txt
object_segmenter/src/: main.cpp
